deployments/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: homeapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant-9-1623703175
      app.kubernetes.io/name: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:2021.11
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8123
          name: http
          protocol: TCP
      volumes:
      - hostPath:
          path: /home/ubuntu/home-assistant
          type: ""
        name: home-assistant
      - hostPath:
          path: /home/ubuntu/media
          type: ""
        name: home-assistant-media
