deployments/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeapps
spec:
  rules:
  - host: home.birchen.tech
    http:
      paths:
      - backend:
          service:
            name: home-assistant-svc
            port:
              name: http
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - home.birchen.tech
    secretName: home.birchen.tech
    
  certificate:
    home.birchen.tech:
      namespace: homeapps
      spec:
        secretName: home.birchen.tech
        issuerRef:
          name: letsencrypt-prod
          kind: ClusterIssuer
          group: cert-manager.io
        dnsNames:
          - home.birchen.tech
